fix: focus input navigation and responsive containers with expiration time - responsive customized project image, right spacing with clamp design - placeholder for contact form with customized content adjustment and timeout - scrollToAndFocus added to navigation.services - ngAfterViewInit and @ViewChild removed from ContactFormComponents as redundant - scrollToContact extended in Hero and Info box

--- a/src/app/pages/portfolio/components/contact-form/contact-form.components.scss
+++ b/src/app/pages/portfolio/components/contact-form/contact-form.components.scss
@@ -68,7 +68,7 @@
     input.ng-invalid.ng-touched:placeholder-shown+.error,
     textarea.ng-invalid.ng-touched:placeholder-shown+.error {
       position: absolute;
-      width: 100%;
+      width: fit-content;
       bottom: 32px;
       transform: translateY(0px);
       transition: transform 300ms ease;
